--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,38 @@
+:root {
+  --accent: #ff70cb;
+  --border_colour: rgba(255, 255, 255, 0.198);
+}
+:root * {
+  box-sizing: border-box;
+}
 #root {
   width: 100vw;
   height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  /* justify-content: center; */
+}
+main {
+  width: 1000px;
+  height: 500px;
+  border: 1px solid var(--border_colour);
+  border-radius: 8px;
+  padding: 0.25rem 2rem;
+  margin-top: 5rem;
+
+  box-shadow: 0 0 4px var(--border_colour);
+  background-color: rgba(17, 17, 17, 0.019);
+  backdrop-filter: blur(1px);
+}
+
+.background {
+  background-color: black;
+  width: 100%;
+  height: 100vh;
+
+  position: absolute;
+  z-index: -1;
+
+  overflow-y: hidden;
 }
