--- a/src/App.css
+++ b/src/App.css
@@ -6,33 +6,43 @@
   box-sizing: border-box;
 }
 #root {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   /* justify-content: center; */
 }
+*::selection {
+  background-color: var(--accent);
+  color: black;
+}
+body {
+  overflow-x: hidden;
+}
 main {
-  width: 1000px;
-  height: 500px;
+  width: 80%;
+  max-width: 1000px;
+  margin-block: auto;
+  height: 3000px;
   border: 1px solid var(--border_colour);
   border-radius: 8px;
   padding: 0.25rem 2rem;
-  margin-top: 5rem;
+
+  margin-top: 8rem;
+  margin-bottom: 5rem;
 
   box-shadow: 0 0 4px var(--border_colour);
-  background-color: rgba(17, 17, 17, 0.019);
+  background-color: rgba(17, 17, 17, 0.2);
   backdrop-filter: blur(1px);
 }
 
 .background {
   background-color: black;
   width: 100%;
-  height: 100vh;
+  height: 100%;
 
-  position: absolute;
+  inset: 0;
+  position: fixed;
   z-index: -1;
-
-  overflow-y: hidden;
 }
