--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -1,12 +1,22 @@
 .navbar {
+  position: fixed;
+  z-index: 1;
   display: flex;
   flex-direction: row;
   justify-content: center;
 
-  width: 100vw;
-  height: 3.5rem;
+  width: 100%;
+  height: 5rem;
+
+  /* background-color: transparent; */
+  transition: background-color 0.3s;
 }
 
+.navbar.scrolled {
+  background-color: rgba(0, 0, 0, 0.2);
+  backdrop-filter: blur(3px);
+  border-bottom: 1px solid var(--border_colour);
+}
 .nav-links {
   display: flex;
   align-items: center;
@@ -34,4 +44,7 @@
   background-color: black;
   color: var(--accent);
   /* text-decoration: underline; */
+}
+.nav-links li a:hover::selection {
+  color: rgb(255, 255, 255);
 }
