--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,10 +1,11 @@
 footer {
-  position: relative;
-  bottom: 0;
-  width: 100vw;
+  /* position: relative; */
+  /* bottom: 0; */
+  width: 100%;
   display: flex;
   justify-content: center;
   margin-bottom: 1rem;
+  margin-top: auto;
 }
 
 footer a {
