--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -1,5 +1,6 @@
 .navbar {
   position: fixed;
+  top: 0;
   z-index: 1;
   display: flex;
   flex-direction: row;
@@ -21,6 +22,7 @@
   display: flex;
   align-items: center;
   height: 100%;
+  padding: 0;
   /* gap: 0.5rem; */
 
   margin: 0;
