--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,7 @@ main {
   margin-bottom: 5rem;
 
   box-shadow: 0 0 4px var(--border_colour);
-  /* background-color: rgba(17, 17, 17, 0.2); */
+  background-color: rgba(17, 17, 17, 0.2);
   backdrop-filter: blur(1px);
 }
 h2 {
