--- a/src/styles/AddEvent.css
+++ b/src/styles/AddEvent.css
@@ -21,7 +21,7 @@
 
 .addevent-container form label {
   opacity: 0.75;
-  color: rgb(168, 168, 168);
+  color: var(--text_colour);
 }
 .addevent-container form div {
   position: relative;
@@ -71,7 +71,7 @@
   border-radius: 4px;
   border: 1px solid transparent;
   background-color: rgba(50, 50, 50, 0.2);
-  color: rgb(168, 168, 168);
+  color: var(--text_colour);
 }
 
 .addevent-container button:hover,
