--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -8,24 +8,24 @@
 .logout-container button {
   max-width: 400px;
 }
-.home-container {
+.home {
   /* width: 500px; */
   max-width: 1000px;
   /* height: 3000px; */
 }
-.home-container form {
+.home form {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   gap: 1rem;
 }
-.home-container form label {
+.home form label {
   opacity: 0.75;
-  color: rgb(168, 168, 168);
+  color: var(--text_colour);
 }
 
-.home-container form input {
+.home form input {
   box-sizing: border-box;
   font-family: inherit;
   width: 100%;
@@ -37,17 +37,17 @@
   border: 1px solid rgba(50, 50, 50, 0.1);
 }
 
-.home-container input:hover {
+.home input:hover {
   border: 1px solid #767676;
   cursor: pointer;
 }
 
-.home-container input:focus {
+.home input:focus {
   cursor: text;
   outline: none;
   border: 1px solid white;
 }
-.home-container button {
+.home button {
   position: relative;
   /* top: 149px; */
 
@@ -57,17 +57,17 @@
   border-radius: 4px;
   border: 1px solid transparent;
   background-color: rgba(50, 50, 50, 0.2);
-  color: rgb(168, 168, 168);
+  color: var(--text_colour);
 }
 
-.home-container button:hover,
-.home-container button:focus {
+.home button:hover,
+.home button:focus {
   opacity: 0.8;
 }
-.home-container button:active {
+.home button:active {
   opacity: 0.5;
 }
-.home-container button:focus {
+.home button:focus {
   outline: none;
   border: 1px solid white;
 }
@@ -80,7 +80,7 @@
 }
 
 @media (width >= 550px) {
-  .home-container {
+  .home {
     width: 500px;
   }
 }
