--- a/src/styles/Help.css
+++ b/src/styles/Help.css
@@ -19,7 +19,7 @@
 .help-sections section {
   /* width: max-content; */
   width: 100%;
-  max-width: 500px;
+  max-width: 800px;
   color: var(--text_colour);
   text-wrap: wrap;
   padding: 1rem;
@@ -30,6 +30,9 @@
 
 iframe {
   width: 100%;
+  /* keep height proportional  */
+  aspect-ratio: 16/9;
+  /* height: 315px; */
 }
 
 hr {
